usles comments removed