@@ -1,10 +1,8 @@
-
 package faktura;
 
 import java.awt.Desktop;
 import java.io.File;
 import java.io.FileNotFoundException;
-import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.util.ArrayList;
@@ -13,19 +11,10 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.swing.JOptionPane;
 import javax.swing.JTable;
+import javax.swing.event.TableModelEvent;
+import javax.swing.event.TableModelListener;
 import javax.swing.table.DefaultTableModel;
 import org.apache.poi.openxml4j.exceptions.InvalidFormatException;
-import org.apache.poi.ss.usermodel.Sheet;
-import org.apache.poi.ss.usermodel.Workbook;
-import org.apache.poi.xssf.usermodel.XSSFWorkbook;
-import javax.swing.table.DefaultTableCellRenderer;
-import javax.swing.table.JTableHeader;
-import javax.swing.table.TableCellRenderer;
-import javax.swing.table.TableColumn;
-import java.awt.Color;
-import java.awt.Component;
-import java.awt.Font;
-import sun.swing.table.DefaultTableCellHeaderRenderer;
 
 public class MainWindow extends javax.swing.JFrame {
 
@@ -35,20 +24,59 @@ public class MainWindow extends javax.swing.JFrame {
     ArrayList<Customer> customerList;
     File plikKlient = new File("D://klienci.txt");
     FileWriter writer;
-    
-    
-    
-    
+
     public MainWindow() throws IOException {
-        
+
         initComponents();
-        
+
+        jTable1.getModel().addTableModelListener(new TableModelListener() {
+
+            double wpis2 = 0;
+            double wpis3 = 0;
+
+            @Override
+            public void tableChanged(TableModelEvent e) {
+
+                switch (e.getColumn()) {
+                    case -1:
+                        System.out.println("Dodano lub usunęto wiersz");
+                        break;
+
+                    case 0:
+                        System.out.println();
+                        break;
+
+                    case 1:
+                        System.out.println();
+                        break;
+
+                    case 2:
+                        System.out.println("Kolumna:" + e.getColumn() + " Wiersz: " + e.getLastRow());
+                        wpis2 = (double) jTable1.getValueAt(e.getLastRow(), e.getColumn());
+                        //System.out.println("Wpisałeś: ");
+
+                        //wpis2 = (double) model.getValueAt(e.getLastRow(), e.getColumn());
+                        break;
+                    case 3:
+                        System.out.println("Kolumna:" + e.getColumn() + " Wiersz: " + e.getLastRow());
+                        //wpis3 = (double) model.getValueAt(e.getLastRow(), e.getColumn());
+                        wpis3 = (double) jTable1.getValueAt(e.getLastRow(), e.getColumn());
+                        break;
+
+                    case 4:
+                        System.out.println("4");
+                        break;
+
+                    default:
+                        System.out.println("Inny");
+                }
+
+            }
+        });
+
     }
 
-
-   
-   
- @SuppressWarnings("unchecked")
+    @SuppressWarnings("unchecked")
     // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
     private void initComponents() {
 
@@ -145,15 +173,16 @@ public class MainWindow extends javax.swing.JFrame {
             }
         });
 
+        jTable1.setAutoCreateRowSorter(true);
         jTable1.setBackground(new java.awt.Color(245, 235, 245));
         jTable1.setBorder(javax.swing.BorderFactory.createLineBorder(new java.awt.Color(0, 0, 0)));
         jTable1.setForeground(new java.awt.Color(30, 88, 9));
         jTable1.setModel(new javax.swing.table.DefaultTableModel(
             new Object [][] {
-                { new Double(1.0), null, null, null, null, null, null}
+                { Double.valueOf(1), null, null, null, null, null, null}
             },
             new String [] {
-                "Lp.", "Towar", "<HTML><CENTER>Cena<BR>jednostkowa", "Ilość", "Suma", "Rabat %", "Suma po rabacie"
+                "Lp.", "Towar", "<HTML><CENTER>Cena<BR>jednostkowa", "Ilość", "Suma", "Rabat %", "<HTML>Suma <BR>po rabacie"
             }
         ) {
             Class[] types = new Class [] {
@@ -162,19 +191,17 @@ public class MainWindow extends javax.swing.JFrame {
 
             public Class getColumnClass(int columnIndex) {
                 return types [columnIndex];
+
             }
+
         });
         jTable1.setToolTipText("");
         jTable1.setDragEnabled(true);
         jTable1.setRowHeight(18);
         jScrollPane1.setViewportView(jTable1);
-        if (jTable1.getColumnModel().getColumnCount() > 0) {
-            jTable1.getColumnModel().getColumn(0).setMaxWidth(30);
-            jTable1.getColumnModel().getColumn(2).setMinWidth(70);
-            jTable1.getColumnModel().getColumn(2).setPreferredWidth(80);
-            jTable1.getColumnModel().getColumn(3).setMaxWidth(50);
-        }
         jTable1.getTableHeader().setDefaultRenderer(new TableRender());
+        //jTable1.getColumnModel().getColumn(2).setCellRenderer(new Column4Renderer());
+        jTable1.getColumnModel().getColumn(0).setMaxWidth(30);
 
         jButton2.setText("Zapisz");
         jButton2.addActionListener(new java.awt.event.ActionListener() {
@@ -299,90 +326,76 @@ public class MainWindow extends javax.swing.JFrame {
     }// </editor-fold>//GEN-END:initComponents
 
 
-    
     private void fieldImieActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_fieldImieActionPerformed
-        // TODO add your handling code here:
+
     }//GEN-LAST:event_fieldImieActionPerformed
 
     private void jButton1ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton1ActionPerformed
-        
+
         Customer tempCustomer = new Customer();
         Excel excel = new Excel();
         customerList = new ArrayList<>();
-        
-        if(fieldImie.getText().equals("") || fieldNazwosko.getText().equals("") ||
-           fieldAddress.getText().equals("") || fieldNazwaFrimy.getText().equals("") ||
-           fieldNIP.getText().equals("") 
-                ){
-            
-            JOptionPane.showMessageDialog(this.getContentPane(), "Wypełnij wszystkie pola!");
-            
-        }else{
-        
 
-        
-        String tempImie = fieldImie.getText();
-        String tempNazwisko = fieldNazwosko.getText();
-        String tempAddress = fieldAddress.getText();
-        String tempNazwa = fieldNazwaFrimy.getText();
-        String tempnip = fieldNIP.getText();
-        
-        tempCustomer.setName(tempImie);
-        tempCustomer.setSurename(tempNazwisko);
-        tempCustomer.setAddress(tempAddress);
-        tempCustomer.setFirm(tempNazwa);
-        tempCustomer.setNip(tempnip);
-        
-        customerList.add(tempCustomer);
-        try {
-            writer = new FileWriter(plikKlient, true);
-        } catch (IOException ex) {
-            Logger.getLogger(MainWindow.class.getName()).log(Level.SEVERE, null, ex);
+        if (fieldImie.getText().equals("") || fieldNazwosko.getText().equals("")
+                || fieldAddress.getText().equals("") || fieldNazwaFrimy.getText().equals("")
+                || fieldNIP.getText().equals("")) {
+
+            JOptionPane.showMessageDialog(this.getContentPane(), "Wypełnij wszystkie pola!");
+
+        } else {
+
+            String tempImie = fieldImie.getText();
+            String tempNazwisko = fieldNazwosko.getText();
+            String tempAddress = fieldAddress.getText();
+            String tempNazwa = fieldNazwaFrimy.getText();
+            String tempnip = fieldNIP.getText();
+
+            tempCustomer.setName(tempImie);
+            tempCustomer.setSurename(tempNazwisko);
+            tempCustomer.setAddress(tempAddress);
+            tempCustomer.setFirm(tempNazwa);
+            tempCustomer.setNip(tempnip);
+
+            customerList.add(tempCustomer);
+            try {
+                writer = new FileWriter(plikKlient, true);
+            } catch (IOException ex) {
+                Logger.getLogger(MainWindow.class.getName()).log(Level.SEVERE, null, ex);
+            }
+
+            try {
+
+                writer.append(customerList.get(0).getName() + "#"
+                        + customerList.get(0).getSureName()
+                        + "#" + customerList.get(0).getAddress() + "#"
+                        + customerList.get(0).getFirm() + "#"
+                        + customerList.get(0).getNIP() + "#\n");
+
+                //writer.flush();
+            } catch (IOException ex) {
+                Logger.getLogger(MainWindow.class.getName()).log(Level.SEVERE, null, ex);
+            }
+
+            try {
+                writer.close();
+            } catch (IOException ex) {
+                Logger.getLogger(MainWindow.class.getName()).log(Level.SEVERE, null, ex);
+            }
         }
-        
-        try {
-            //writer.append(System.lineSeparator());
-            writer.append(customerList.get(0).getName()+"#"
-                    +customerList.get(0).getSureName()+
-                    "#"+customerList.get(0).getAddress()+"#"
-                    +customerList.get(0).getFirm()+"#"
-                    +customerList.get(0).getNIP()+"#\n");
-            
-            //writer.flush();
-        } catch (IOException ex) {
-            Logger.getLogger(MainWindow.class.getName()).log(Level.SEVERE, null, ex);
-        }
-    
-        /*
-        try {
-            
-           excel.saveExcelCustomer(tempCustomer);
-            
-        } catch (IOException | BiffException | WriteException ex) {
-            Logger.getLogger(MainWindow.class.getName()).log(Level.SEVERE, null, ex);
-        }
-        */
-        
-        try {
-            writer.close();
-        } catch (IOException ex) {
-            Logger.getLogger(MainWindow.class.getName()).log(Level.SEVERE, null, ex);
-        }
-       } 
     }//GEN-LAST:event_jButton1ActionPerformed
 
+
     private void jButton2ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton2ActionPerformed
-        
+
         Excel newExcel = new Excel();
         Customer client = new Customer();
-        
+
         client.setName(fieldImie.getText());
         client.setSurename(fieldNazwosko.getText());
         client.setAddress(fieldAddress.getText());
         client.setFirm(fieldNazwaFrimy.getText());
         client.setNip(fieldNIP.getText());
-                
-                
+
         try {
             newExcel.SaveExcel(client, jTable1);
         } catch (IOException ex) {
@@ -390,76 +403,71 @@ public class MainWindow extends javax.swing.JFrame {
         } catch (InvalidFormatException ex) {
             Logger.getLogger(MainWindow.class.getName()).log(Level.SEVERE, null, ex);
         }
-        
+
         try {
             //funkcja która sprawdza czy wpisane dane klienta znajdują się już w bazie danych kontrahentów
             // jeśli nie ma tam wpisu to dodaje go do bazy, jeśli jest to to nie robi nic
             //sprawdzany będzie nip
 
-            //String s = "321";
-            
             checkForExistingItem(fieldNIP.getText());
         } catch (FileNotFoundException ex) {
             Logger.getLogger(MainWindow.class.getName()).log(Level.SEVERE, null, ex);
         } catch (IOException ex) {
             Logger.getLogger(MainWindow.class.getName()).log(Level.SEVERE, null, ex);
         }
-        
-   
-        
+
+
     }//GEN-LAST:event_jButton2ActionPerformed
 
-    public void checkForExistingItem(String n) throws FileNotFoundException, IOException{
-        
+    public void checkForExistingItem(String n) throws FileNotFoundException, IOException {
+
         Scanner sC = new Scanner(plikKlient);
         FileWriter fileWriter = new FileWriter(plikKlient, true);
         boolean status = false;
-        
-        sC.useDelimiter("#");
-        
-        while(sC.hasNext()){
-            
-              if(sC.next().equals(n)){
-                  System.out.println("Pasuje");
-                  status = true;
-                  break;
-              }
-        }
-        
-        if(status == false){
-            
 
-        fileWriter.append(fieldImie.getText()+"#"+
-                fieldNazwosko.getText()+"#"+
-                fieldAddress.getText()+"#"+
-                fieldNazwaFrimy.getText()+"#"+
-                fieldNIP.getText()+"#\n");
-        
+        sC.useDelimiter("#");
+
+        while (sC.hasNext()) {
+
+            if (sC.next().equals(n)) {
+                System.out.println("Pasuje");
+                status = true;
+                break;
+            }
         }
-        
+
+        if (status == false) {
+
+            fileWriter.append(fieldImie.getText() + "#"
+                    + fieldNazwosko.getText() + "#"
+                    + fieldAddress.getText() + "#"
+                    + fieldNazwaFrimy.getText() + "#"
+                    + fieldNIP.getText() + "#\n");
+
+        }
+
         fileWriter.close();
         sC.close();
     }
-    
-    
-    private void jButton3ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton3ActionPerformed
-        
-            //funkcja któradodaje wiersz do tabeli
 
-            model =(DefaultTableModel)jTable1.getModel();
-            model.addRow(new Object[] {++counter,});
-            
-            if(counter <= 0){
-                
-                counter = 0;
-                
-            }
-         
+
+    private void jButton3ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton3ActionPerformed
+
+        //funkcja któradodaje wiersz do tabeli
+        model = (DefaultTableModel) jTable1.getModel();
+        model.addRow(new Object[]{++counter,});
+
+        if (counter <= 0) {
+
+            counter = 0;
+
+        }
+
     }//GEN-LAST:event_jButton3ActionPerformed
 
     //dodatkowy frame na liste klientów
     private void jButton6ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton6ActionPerformed
-        
+
         ClientsFrame clFrame = null;
         try {
             clFrame = new ClientsFrame();
@@ -467,73 +475,67 @@ public class MainWindow extends javax.swing.JFrame {
             Logger.getLogger(MainWindow.class.getName()).log(Level.SEVERE, null, ex);
         }
         clFrame.setVisible(true);
-        
-        
+
+
     }//GEN-LAST:event_jButton6ActionPerformed
 
     private void jButton7ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton7ActionPerformed
-        
-        model =(DefaultTableModel)jTable1.getModel();
+
+        model = (DefaultTableModel) jTable1.getModel();
         model.removeRow(--counter);
-        
-        if(counter <= 0){
-            
+
+        if (counter <= 0) {
+
             JOptionPane.showMessageDialog(this.getContentPane(), "Wiersz 0 !");
             counter = 1;
-            model.addRow(new Object[] {counter,});
+            model.addRow(new Object[]{counter,});
         }
-        
-        
-        
+
+
     }//GEN-LAST:event_jButton7ActionPerformed
 
     private void FocusHendler(java.awt.event.FocusEvent evt) {//GEN-FIRST:event_FocusHendler
-        
-        //System.out.println("dupa");
-        
+
+
     }//GEN-LAST:event_FocusHendler
 
     private void fieldNazwaFrimyCaretUpdate(javax.swing.event.CaretEvent evt) {//GEN-FIRST:event_fieldNazwaFrimyCaretUpdate
-        
-        
+
+
     }//GEN-LAST:event_fieldNazwaFrimyCaretUpdate
 
     private void fieldNazwaFrimyComponentShown(java.awt.event.ComponentEvent evt) {//GEN-FIRST:event_fieldNazwaFrimyComponentShown
-        
+
     }//GEN-LAST:event_fieldNazwaFrimyComponentShown
 
     private void fieldNazwaFrimyFocusGained(java.awt.event.FocusEvent evt) {//GEN-FIRST:event_fieldNazwaFrimyFocusGained
-        
-        //
-        
+
+
     }//GEN-LAST:event_fieldNazwaFrimyFocusGained
 
     private void fieldNazwaFrimyFocusLost(java.awt.event.FocusEvent evt) {//GEN-FIRST:event_fieldNazwaFrimyFocusLost
-        
-        //fieldNazwaFrimy.setText(null);
-        
+
+
     }//GEN-LAST:event_fieldNazwaFrimyFocusLost
 
     private void fieldNIPActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_fieldNIPActionPerformed
-        // TODO add your handling code here:
+
     }//GEN-LAST:event_fieldNIPActionPerformed
 
     private void jButton5ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton5ActionPerformed
-        
+
         Desktop desktop = Desktop.getDesktop();
-        
+
         File outputFile = new File("C://OutputExcel.xlsx");
         try {
             desktop.open(outputFile);
         } catch (IOException ex) {
             Logger.getLogger(MainWindow.class.getName()).log(Level.SEVERE, null, ex);
         }
-        
-    }//GEN-LAST:event_jButton5ActionPerformed
-    
-    public static void fillTextFields(String[] s){
-        
 
+    }//GEN-LAST:event_jButton5ActionPerformed
+
+    public static void fillTextFields(String[] s) {
 
         fieldImie.setText(s[0]);
         fieldNazwosko.setText(s[1]);
